# Fly_Deal_Finder

./: .gitignore  README.md  data_manager.py  flight_search.py  main.py  notification_manager.py  pyproject.toml
src/: data_manager.py  flight_search.py  main.py  notification_manager.py
src/settings/: base.py
src/settings/envs/: .env.sample
